feat: 点击x历项的动画

--- a/my-calender/src/Calendar/index.scss
+++ b/my-calender/src/Calendar/index.scss
@@ -197,11 +197,18 @@ $blue-3: rgb(153, 201, 239);
       }
       &-shrink {
         animation: 0.5s shrink-1;
-        // transform: scale(0.75);
-        // transition: all 0.15s;
+      }
+      &-enlarge {
+        animation: 0.5s enlarge-1;
       }
     }
   }
+}
+
+.shrink-container {
+  width: 100%;
+  height: 295px;
+  overflow: hidden;
 }
 
 @keyframes shrink-1 {
@@ -219,14 +226,20 @@ $blue-3: rgb(153, 201, 239);
     transform: scale(1);
   }
 }
-.shrink-container {
-  width: 100%;
-  height: 295px;
-  overflow: hidden;
-}
-.shrink {
-  transform: scale(0.75);
-  transition: all 0.15s;
+
+@keyframes enlarge-1 {
+  39% {
+    transform: scale(1.25);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+    transform: scale(0.75);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 .carousel-day {
