--- a/my-calender/src/Calendar/index.scss
+++ b/my-calender/src/Calendar/index.scss
@@ -1,10 +1,4 @@
-$basicBgColor: rgb(43, 49, 61);
-$gray-1: rgb(95, 97, 101);
-$gray-2: rgb(169, 169, 169);
-$gray-3: rgb(223, 223, 223);
-$blue-1: rgb(0, 120, 215);
-$blue-2: rgb(102, 174, 215);
-$blue-3: rgb(153, 201, 239);
+@import './assets/style/color.scss';
 .calendar {
   & * {
     box-sizing: border-box;
@@ -20,189 +14,7 @@ $blue-3: rgb(153, 201, 239);
   background-color: $basicBgColor;
   color: white;
   border: 1px solid $gray-1;
-  font-family: "Segoe UI", Times, serif;
-  &-top {
-    width: 100%;
-    display: flex;
-    &-dragable {
-      position: relative;
-      z-index: 1;
-      height: 25px;
-      width: 330px;
-      cursor: move;
-    }
-    &-close {
-      width: 30px;
-      height: 25px;
-      background: url(./assets/close.png) center no-repeat;
-      background-size: 40%;
-      transition: background-image, background-color 0.1s;
-      &:hover {
-        background-image: url(./assets/close-hover.png);
-        background-color: red;
-      }
-    }
-  }
-  &-header {
-    box-sizing: border-box;
-    height: 85px;
-    width: 100%;
-    padding: 0 25px 25px;
-    // padding: 25px;
-    border-bottom: 1px solid $gray-1;
-    &-clock {
-      font-size: 46px;
-      line-height: 35px;
-      height: 35px;
-    }
-    &-todaytime {
-      width: 100px;
-      margin-top: 15px;
-      font-size: 14px;
-      color: $blue-3;
-      cursor: pointer;
-      &:hover {
-        color: $gray-2;
-      }
-      &:active {
-        color: $gray-3;
-      }
-    }
-  }
-  &-main {
-    height: 345px;
-    padding: 25px 12px 0;
-    width: 100%;
-    &-caption {
-      padding-left: 13px;
-      height: 23px;
-      display: flex;
-      justify-content: space-between;
-      //   background-color: yellowgreen;
-      color: $gray-3;
-      &-text {
-        font-size: 15px;
-      }
-      &-arrow {
-        width: 96px;
-        // height: 37px;
-        display: flex;
-        // background-color: black;
-        justify-content: space-around;
-        align-items: center;
-        &-prev,
-        &-next {
-          flex-basis: 1;
-          width: 48px;
-          //   background-color: brown;
-          width: 10px;
-          height: 10px;
-          border-top: 1px solid;
-          border-left: 1px solid;
-        }
-        &-prev {
-          transform: translate(0, 3.53px) rotate(45deg);
-        }
-        &-next {
-          transform: translate(0, -3.53px) rotate(225deg);
-        }
-      }
-    }
-    &-clickable {
-      &:hover {
-        color: white;
-      }
-      &:active {
-        color: $gray-3;
-      }
-    }
-    &-tbody {
-      width: 100%;
-      height: 295px;
-      // background-color: blueviolet;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      // transform: scale(0);
-      //芜湖 聪明的scale
-      &-row {
-        display: flex;
-        justify-content: space-between;
-        flex-shrink: 1;
-        &-item,
-        &-item-day,
-        &-item-month {
-          margin: 1px;
-          flex-grow: 1;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 45px;
-        }
-        &-item-day,
-        &-item {
-          height: 38px;
-        }
-        &-item-month {
-          height: 70px;
-        }
-        .inactive,
-        .active {
-          &:hover {
-            border: 2px solid $gray-1;
-          }
-          &:active {
-            border: 2px solid $gray-2;
-          }
-        }
-        .inactive {
-          color: $gray-1;
-        }
-        .active {
-          color: $gray-3;
-        }
-        .day-light,
-        .month-and-year-light {
-          background-color: $blue-1;
-          &:hover {
-            border: 2px solid $blue-2;
-          }
-          &:active {
-            border: 2px solid $blue-3;
-          }
-        }
-        .day-light {
-          border: 2px solid $blue-1;
-          background-clip: content-box;
-          padding: 2px;
-        }
-        .month-and-year-light {
-          &:hover {
-            border: 2px solid $blue-2;
-          }
-          &:active {
-            border: 2px solid $blue-3;
-          }
-        }
-      }
-      &-day {
-        position: relative;
-        height: 252px;
-        overflow: hidden;
-      }
-      &-month-and-year {
-        height: 295px;
-        position: relative;
-        overflow: hidden;
-      }
-      &-shrink {
-        animation: 0.5s shrink-1;
-      }
-      &-enlarge {
-        animation: 0.5s enlarge-1;
-      }
-    }
-  }
+  font-family: 'Segoe UI', Times, serif;
 }
 
 .shrink-container {
@@ -239,25 +51,6 @@ $blue-3: rgb(153, 201, 239);
   100% {
     opacity: 1;
     transform: scale(1);
-  }
-}
-
-.carousel-day {
-  $singleHeight: 252px;
-  width: 100%;
-  position: absolute;
-  top: -$singleHeight;
-  height: calc(#{$singleHeight} * 3);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  &-prev {
-    transition: top 0.15s;
-    top: 0px;
-  }
-  &-next {
-    transition: top 0.15s;
-    top: calc(-#{$singleHeight} * 2);
   }
 }
 
