refactor: 更改所有动画实现方式，由不稳定的settimeout决定各次序改为用reat-transition-group实现

--- a/my-calender/src/Calendar/components/calendar-main.js/calendar-month-year/calendarMonthAndYear.scss
+++ b/my-calender/src/Calendar/components/calendar-main.js/calendar-month-year/calendarMonthAndYear.scss
@@ -1,19 +1,5 @@
-.carousel-month-and-year {
-  $singleHeight: 295px;
+.calendar-main-tbody-month-and-year {
   width: 100%;
+  height: 295px;
   position: absolute;
-  top: -$singleHeight;
-  height: calc(#{$singleHeight} * 3);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  outline: 1px solid blue;
-  &-prev {
-    transition: top 0.15s;
-    top: 0px;
-  }
-  &-next {
-    transition: top 0.15s;
-    top: calc(-#{$singleHeight} * 2);
-  }
 }
