--- a/my-calender/src/Calendar/components/calendar-main.js/calendar-day/calendarDay.scss
+++ b/my-calender/src/Calendar/components/calendar-main.js/calendar-day/calendarDay.scss
@@ -1,18 +1,4 @@
-.carousel-day {
-  $singleHeight: 252px;
-  width: 100%;
+.calendar-main-tbody-day {
+  height: 252px;
   position: absolute;
-  top: -$singleHeight;
-  height: calc(#{$singleHeight} * 3);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  &-prev {
-    transition: top 0.15s;
-    top: 0px;
-  }
-  &-next {
-    transition: top 0.15s;
-    top: calc(-#{$singleHeight} * 2);
-  }
 }
