--- a/my-calender/src/Calendar/components/calendar-head.js/calendarHead.scss
+++ b/my-calender/src/Calendar/components/calendar-head.js/calendarHead.scss
@@ -1,4 +1,4 @@
-@import "../../assets/style/color.scss";
+@import '../../assets/style/color.scss';
 .calendar-header {
   box-sizing: border-box;
   height: 85px;
@@ -12,7 +12,7 @@
     height: 35px;
   }
   &-todaytime {
-    width: 100px;
+    width: 120px;
     margin-top: 15px;
     font-size: 14px;
     color: $blue-3;
